--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,8 @@ jobs:
     runs-on: ubuntu-20.04
     container: ruby:2.2
     steps:
+        - name: Install system dependencies
+          run: apt-get update && apt-get install -y python3
         - name: Checkout
           uses: actions/checkout@v2
         - name: Bundle
