--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,21 @@ jobs:
     runs-on: ubuntu-20.04
     container: ruby:2.2
     steps:
+        - name: Install system dependencies
+          run: |
+              apt-get update
+              apt-get install -y apt-transport-https
+              echo 'deb http://apt.llvm.org/jessie/ llvm-toolchain-jessie-8 main' >> /etc/apt/sources.list.d/llvm-8.list
+              echo 'deb-src http://apt.llvm.org/jessie/ llvm-toolchain-jessie-8 main' >> /etc/apt/sources.list.d/llvm-8.list
+              wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add -
+              apt-get update
+              apt-get install -y clang-8 lldb-8 lld-8
+              apt-get install -y clang-tools-8 clang-format-8
+              apt-get install -y libc++-8-dev libclang-8-dev libc++abi-8-dev
+              update-alternatives --install /usr/bin/clang clang /usr/bin/clang-8 100
+              update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-8 100
+              update-alternatives --install /usr/bin/clangd clangd /usr/bin/clangd-8 100
+              update-alternatives --install /usr/bin/clang-format clang-format /usr/bin/clang-format-8 100
         - name: Checkout
           uses: actions/checkout@v2
         - name: Bundle
