--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,13 @@
 AllCops:
   TargetRubyVersion: 2.0
   Exclude:
-    - src/**
+    - src/**/*
+    - pkg/**/*
+    - vendor/**/*
+
+Naming/FileName:
+  Exclude:
+    - lib/libv8-node.rb
 
 Style/Documentation:
   Enabled: false
@@ -13,4 +19,10 @@ Style/NumericPredicate:
   Enabled: false
 
 Metrics/LineLength:
+  Enabled: false
+
+Style/WordArray:
+  Enabled: false
+
+Style/PerlBackrefs:
   Enabled: false
